// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the SidebarHeader component when the component is rendered and account is defined should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="sc-gtsrHT cWvxos"
  >
    <span />
    <img
      alt=""
      class="sc-dlnjwi gppAIF"
      src="https://picsum.photos/72"
    />
    <a
      class="sc-bdnxRM fDEryd"
    >
      <svg
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.643 10.674l-3.367 3.3a.987.987 0 01-1.4-1.392l1.137-1.129c.259-.257.173-.465-.192-.465H10.3a.984.984 0 110-1.968h4.525c.363 0 .451-.208.192-.466L13.88 7.425a.987.987 0 011.4-1.392l3.359 3.262a.957.957 0 01.004 1.379zM5.365 14.936h1.977a.987.987 0 110 1.974H4.379a1.317 1.317 0 01-1.314-1.316V4.41a1.317 1.317 0 011.314-1.316h2.963a.987.987 0 110 1.974H5.365a.327.327 0 00-.33.328v9.214a.329.329 0 00.33.326z"
          fill="#8d89a3"
          fill-rule="evenodd"
        />
      </svg>
    </a>
    <div
      class="sc-hKFxyN dqEzzQ"
    >
      <p>
        My Account
      </p>
      <span>
        123456...9012
      </span>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Given the SidebarHeader component when the component is rendered and account is null should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="sc-gtsrHT cWvxos"
  >
    <span />
    <img
      alt=""
      class="sc-dlnjwi gppAIF"
      src="https://picsum.photos/72"
    />
    <a
      class="sc-bdnxRM fDEryd"
    >
      <svg
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.643 10.674l-3.367 3.3a.987.987 0 01-1.4-1.392l1.137-1.129c.259-.257.173-.465-.192-.465H10.3a.984.984 0 110-1.968h4.525c.363 0 .451-.208.192-.466L13.88 7.425a.987.987 0 011.4-1.392l3.359 3.262a.957.957 0 01.004 1.379zM5.365 14.936h1.977a.987.987 0 110 1.974H4.379a1.317 1.317 0 01-1.314-1.316V4.41a1.317 1.317 0 011.314-1.316h2.963a.987.987 0 110 1.974H5.365a.327.327 0 00-.33.328v9.214a.329.329 0 00.33.326z"
          fill="#8d89a3"
          fill-rule="evenodd"
        />
      </svg>
    </a>
    <div
      class="sc-hKFxyN dqEzzQ"
    >
      <p>
        My Account
      </p>
      <span>
        -
      </span>
    </div>
  </header>
</DocumentFragment>
`;
